--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #ff7e5f, #feb47b);
+            color: #fff;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 4em;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+        p {
+            font-size: 1.5em;
+            margin-top: 0;
+        }
+        .name {
+            font-weight: bold;
+            color: #ffddc1;
+            font-size: 2em;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome</h1>
+    <p>Hello! My name is <span class="name">Anastasiia Holubieva</span>.</p>
+    <p>This site is simple example for my homework.</p>
+</body>
+</html>
 
