--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #ff7e5f, #feb47b);
+            background: linear-gradient(135deg, #5facff80, #ebf9ff);
             color: #fff;
             text-align: center;
             padding: 50px;
@@ -23,7 +23,7 @@
         }
         .name {
             font-weight: bold;
-            color: #ffddc1;
+            color: #505050;
             font-size: 2em;
         }
     </style>
