--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
             background: linear-gradient(135deg, #5facff80, #ebf9ff);
             color: #fff;
             text-align: center;
-            padding: 50px;
+            padding-left: 50px;
+            padding-right: 50px;
+            padding-top: 100px;
         }
         h1 {
             font-size: 4em;
