--- a/index.html
+++ b/index.html
@@ -34,15 +34,12 @@
             color: #505050;
             font-size: 2em;
         }
-        .container {
-            max-width: 80%;
-            margin: 0 auto;
-        }
+        
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My Beautiful Site</h1>
+    <div>
+        <h1>Welcome to the Site</h1>
         <p>Hello! My name is <span class="name">Anastasiia Holubieva</span>.</p>
         <p>This site is simple example for my homework.</p>
     </div>
